implement implement /api/v1/analysis/root-component, add get_purl pg func, loadgrap and rwlocked hashmap<petgraph>
